--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -127,16 +127,16 @@
       additionalBranchPrefix: "",
       separateMinorPatch: true,
     },
-    // {
-    //   matchDatasources: ["helm", "docker"],
-    //   matchPackageNames: [
-    //     "quay.io/cilium/cilium",
-    //     "quay.io/cilium/operator-generic",
-    //     "cilium",
-    //   ],
-    //   groupName: "cilium",
-    //   additionalBranchPrefix: "",
-    //   separateMinorPatch: true,
-    // },
+    {
+      matchDatasources: ["helm", "docker"],
+      matchPackageNames: [
+        "quay.io/cilium/cilium",
+        "quay.io/cilium/operator-generic",
+        "cilium",
+      ],
+      groupName: "cilium",
+      additionalBranchPrefix: "",
+      separateMinorPatch: true,
+    },
   ],
 }
