--- a/k8s/clusters/cluster-0/manifests/apps/media/plex/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/plex/helm-release.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     image:
       repository: ghcr.io/k8s-at-home/plex
-      tag: v1.25.3.5409-f11334058
+      tag: v1.25.2.5319-c43dc0277
     env:
       TZ: "America/New_York"
     podSecurityContext:
@@ -57,10 +57,10 @@ spec:
         enabled: true
         existingClaim: plex-config-pvc
 
-      # transcode:
-      #   enabled: true
-      #   type: emptyDir
-      #   medium: Memory
+      transcode:
+        enabled: true
+        type: emptyDir
+        medium: Memory
 
       nfs-nas-media:
         enabled: true
