--- a/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/qbittorrent/helm-release.yaml
@@ -41,8 +41,7 @@ spec:
       bittorrent:
         enabled: true
         type: LoadBalancer
-        externalIPs:
-          - "${SVC_QBITTORRENT_ADDRESS}"
+        loadBalancerIP: "${SVC_QBITTORRENT_ADDRESS}"
         ports:
           bittorrent:
             enabled: true
@@ -50,7 +49,6 @@ spec:
             protocol: TCP
             targetPort: 56059
         externalTrafficPolicy: Local
-
     ingress:
       main:
         enabled: true
