--- a/k8s/clusters/cluster-0/manifests/apps/media/plex/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/plex/helm-release.yaml
@@ -42,6 +42,8 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
@@ -52,6 +54,7 @@ spec:
         tls:
         - hosts:
           - "plex.${SECRET_DOMAIN}"
+          secretName: tls.plex
     persistence:
       config:
         enabled: true
