--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-media-repo/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-media-repo/helm-release.yaml
@@ -16,9 +16,6 @@ spec:
         name: ananace-charts
         namespace: flux-system
       interval: 5m
-  dependsOn:
-    - name: matrix-synapse
-      namespace: comms
   values:
     image:
       repository: turt2live/matrix-media-repo
@@ -72,20 +69,20 @@ spec:
     persistence:
       enabled: false
 
-  valuesFrom:
-    - kind: ConfigMap
-      name: matrix-media-ceph-bucket
-      valuesKey: BUCKET_NAME
-      targetPath: config.datastores.opts.bucketName
-    - kind: ConfigMap
-      name: matrix-media-ceph-bucket
-      valuesKey: BUCKET_HOST
-      targetPath: config.datastores.opts.endpoint
-    - kind: Secret
-      name: matrix-media-ceph-bucket
-      valuesKey: AWS_ACCESS_KEY_ID
-      targetPath: config.datastores.opts.accessKeyId
-    - kind: Secret
-      name: matrix-media-ceph-bucket
-      valuesKey: AWS_SECRET_ACCESS_KEY
-      targetPath: config.datastores.opts.accessSecret
+  # valuesFrom:
+  #   - kind: ConfigMap
+  #     name: matrix-media-ceph-bucket
+  #     valuesKey: BUCKET_NAME
+  #     targetPath: config.datastores.opts.bucketName
+  #   - kind: ConfigMap
+  #     name: matrix-media-ceph-bucket
+  #     valuesKey: BUCKET_HOST
+  #     targetPath: config.datastores.opts.endpoint
+  #   - kind: Secret
+  #     name: matrix-media-ceph-bucket
+  #     valuesKey: AWS_ACCESS_KEY_ID
+  #     targetPath: config.datastores.opts.accessKeyId
+  #   - kind: Secret
+  #     name: matrix-media-ceph-bucket
+  #     valuesKey: AWS_SECRET_ACCESS_KEY
+  #     targetPath: config.datastores.opts.accessSecret
