deploy db namespace

--- a/k8s/clusters/cluster-0/manifests/core/namespaces/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/core/namespaces/kustomization.yaml
@@ -8,6 +8,7 @@ resources:
   - cert-manager.yaml
   - collab.yaml
   - comms.yaml
+  - db.yaml
   - default.yaml
   - ext-gateway.yaml
   - flux-system.yaml
