deploy kubegres gitrepo

--- a/k8s/clusters/cluster-0/flux/repositories/git/kustomization.yaml
+++ b/k8s/clusters/cluster-0/flux/repositories/git/kustomization.yaml
@@ -7,5 +7,6 @@ resources:
   - benji-charts.yaml
   - dacruz21-charts-git.yaml
   - invidious-charts-git.yaml
+  - kubegres.yaml
   - mintel-dex-charts.yaml
   - version-checker.yaml
