--- a/k8s/clusters/cluster-0/flux/orchestration/apps-comms.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-comms.yaml
@@ -65,25 +65,25 @@ spec:
 #     provider: sops
 #     secretRef:
 #       name: sops-gpg
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
-# kind: Kustomization
-# metadata:
-#   name: apps-comms-matrix-slack
-#   namespace: flux-system
-# spec:
-#   dependsOn:
-#     - name: cluster-namespaces
-#     - name: rook-ceph-cluster
-#     - name: core-traefik
-#   interval: 5m
-#   path: "./k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack"
-#   prune: true
-#   wait: true
-#   sourceRef:
-#     kind: GitRepository
-#     name: k8s-gitops
-#   decryption:
-#     provider: sops
-#     secretRef:
-#       name: sops-gpg
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
+kind: Kustomization
+metadata:
+  name: apps-comms-matrix-slack
+  namespace: flux-system
+spec:
+  dependsOn:
+    - name: cluster-namespaces
+    - name: rook-ceph-cluster
+    - name: core-traefik
+  interval: 5m
+  path: "./k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack"
+  prune: true
+  wait: true
+  sourceRef:
+    kind: GitRepository
+    name: k8s-gitops
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-gpg
