--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/postgres-db.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/postgres-db.yaml
@@ -3,7 +3,7 @@ apiVersion: kubegres.reactive-tech.io/v1
 kind: Kubegres
 metadata:
   name: matrix-slack-postgres
-  namespace: networking
+  namespace: comms
 spec:
   replicas: 1
   image: docker.io/library/postgres:13.5
