update configmap for postgres in matrix slack

--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/postgres-db.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/postgres-db.yaml
@@ -10,6 +10,7 @@ spec:
   database:
     size: 5Gi
     storageClassName: ceph-block
+  customConfig: matrix-slack-postgres-configmap
   env:
     - name: POSTGRES_PASSWORD
       value: ${SECRET_MATRIX_SLACK_POSTGRESQL_PASSWORD}
