--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/postgres-configmap.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/postgres-configmap.yaml
@@ -22,22 +22,22 @@ data:
   primary_init_script.sh: |
     #!/bin/bash
     set -e
-    # testing to see if it's overridden
+    
     # This script assumes that the env-var $POSTGRES_MYAPP_PASSWORD contains the password of the custom user to create.
     # You can add any env-var in your Kubegres resource config YAML.
-    #dt=$(date '+%d/%m/%Y %H:%M:%S');
-    #echo "$dt - Running init script the 1st time Primary PostgreSql container is created...";
-    #customDatabaseName="my_app"
-    #customUserName="my_username"
-    #echo "$dt - Running: psql -v ON_ERROR_STOP=1 --username $POSTGRES_USER --dbname $POSTGRES_DB ...";
-    #psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
-    #CREATE DATABASE $customDatabaseName;
-    #CREATE USER $customUserName WITH PASSWORD '$POSTGRES_MYAPP_PASSWORD';
-    #\connect $customDatabaseName;
-    #CREATE TABLE account(user_id serial PRIMARY KEY, username VARCHAR (50) NOT NULL);
-    #INSERT INTO account VALUES (1, 'username1');
-    #INSERT INTO account VALUES (2, 'username2');
-    #GRANT ALL PRIVILEGES ON DATABASE "$customDatabaseName" to $customUserName;
-    #GRANT ALL ON "account" to $customUserName;
-    #EOSQL
-    #echo "$dt - Init script is completed";
+    dt=$(date '+%d/%m/%Y %H:%M:%S');
+    echo "$dt - Running init script the 1st time Primary PostgreSql container is created...";
+    # customDatabaseName="my_app"
+    # customUserName="my_username"
+    echo "$dt - Running: psql -v ON_ERROR_STOP=1 --username $POSTGRES_USER --dbname $POSTGRES_DB ...";
+    psql -v ON_ERROR_STOP=1 --username "$POSTGRES_USER" --dbname "$POSTGRES_DB" <<-EOSQL
+    CREATE DATABASE $customDatabaseName;
+    CREATE USER $customUserName WITH PASSWORD '$POSTGRES_MYAPP_PASSWORD';
+    \connect $customDatabaseName;
+    CREATE TABLE account(user_id serial PRIMARY KEY, username VARCHAR (50) NOT NULL);
+    INSERT INTO account VALUES (1, 'username1');
+    INSERT INTO account VALUES (2, 'username2');
+    GRANT ALL PRIVILEGES ON DATABASE "$customDatabaseName" to $customUserName;
+    GRANT ALL ON "account" to $customUserName;
+    EOSQL
+    echo "$dt - Init script is completed";
