db auto created

--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-slack/kustomization.yaml
@@ -4,6 +4,6 @@ kind: Kustomization
 resources:
   - config.yaml
   - postgres-configmap.yaml
-  - matrix-slack-postgresql-pvc.yaml
+  # - matrix-slack-postgresql-pvc.yaml
   - helm-release.yaml
   - postgres-db.yaml
