--- a/k8s/clusters/cluster-0/manifests/apps/comms/matrix-synapse/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/matrix-synapse/kustomization.yaml
@@ -3,5 +3,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - signing-key.enc.yaml
+  - postgres-db.yaml
   - postgresql-data-pvc.yaml
   - helm-release.yaml
