disable mautrix facebook db

--- a/k8s/clusters/cluster-0/manifests/apps/comms/mautrix-facebook/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/comms/mautrix-facebook/helm-release.yaml
@@ -65,7 +65,7 @@ spec:
             name: mautrix-facebook-config
 
     postgresql:
-      enabled: true
+      enabled: false
       postgresqlUsername: mautrixuser
       postgresqlPassword: mautrixpass
       postgresqlDatabase: mautrix-facebook
