--- a/k8s/clusters/cluster-0/manifests/apps/media/jackett/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/jackett/helm-release.yaml
@@ -30,8 +30,12 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
           traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
           traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
         hosts:
           - host: "jackett.${SECRET_DOMAIN}"
             paths:
@@ -40,7 +44,7 @@ spec:
         tls:
           - hosts:
               - "jackett.${SECRET_DOMAIN}"
-            secretName: jackett-cert
+            secretName: tls.jackett
     persistence:
       config:
         enabled: true
