--- a/k8s/clusters/cluster-0/manifests/apps/media/lidarr/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/lidarr/helm-release.yaml
@@ -27,6 +27,8 @@ spec:
         enabled: true
         ingressClassName: "traefik"
         annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
           external-dns/is-public: "true"
           hajimari.io/enable: "true"
@@ -41,6 +43,7 @@ spec:
         tls:
           - hosts:
               - "lidarr.${SECRET_DOMAIN}"
+            secretName: tls.lidarr
       api:
         enabled: true
         ingressClassName: "traefik"
@@ -54,6 +57,7 @@ spec:
         tls:
           - hosts:
               - "lidarr.${SECRET_DOMAIN}"
+            secretName: tls.lidarr
     podSecurityContext:
       supplementalGroups:
         - 100
@@ -61,10 +65,16 @@ spec:
       config:
         enabled: true
         existingClaim: lidarr-config-pvc
-      media:
+      nfs-nas-media:
         enabled: true
-        existingClaim: media-nfs-tank-share-pvc
+        type: custom
+        volumeSpec:
+          nfs:
+            server: "nas.${SECRET_DOMAIN}"
+            path: /mnt/tank/share
         mountPath: /media
+        readOnly: false
+      
     resources:
       requests:
         memory: 250Mi
