--- a/k8s/clusters/cluster-0/flux/orchestration/apps-media.yaml
+++ b/k8s/clusters/cluster-0/flux/orchestration/apps-media.yaml
@@ -345,13 +345,13 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1beta2
 kind: Kustomization
 metadata:
-  name: apps-media-mylarr
+  name: apps-media-mylar
   namespace: flux-system
 spec:
   dependsOn:
     - name: cluster-namespaces
   interval: 5m
-  path: "./k8s/clusters/cluster-0/manifests/apps/media/mylarr"
+  path: "./k8s/clusters/cluster-0/manifests/apps/media/mylar"
   prune: true
   wait: true
   sourceRef:
