change cert name

--- a/k8s/clusters/cluster-0/manifests/apps/media/mylar/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/mylar/helm-release.yaml
@@ -44,7 +44,7 @@ spec:
         tls:
           - hosts:
               - "mylar.${SECRET_DOMAIN}"
-            secretName: tls.mylarr
+            secretName: tls.mylar
     persistence:
       config:
         enabled: true
