--- a/k8s/clusters/cluster-0/manifests/apps/media/resilio-sync/kustomization.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/resilio-sync/kustomization.yaml
@@ -2,4 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - config-ryan-pvc.yaml
+  - config-stefanie-pvc.yaml
   - stateful-set.yaml
