--- a/k8s/clusters/cluster-0/manifests/apps/media/resilio-sync/stateful-set.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/resilio-sync/stateful-set.yaml
@@ -204,7 +204,7 @@ spec:
   loadBalancerIP: 10.45.10.18
 
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   annotations:
