--- a/k8s/clusters/cluster-0/manifests/apps/media/resilio-sync/stateful-set.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/media/resilio-sync/stateful-set.yaml
@@ -227,6 +227,7 @@ spec:
                 port:
                   number: 8888
             path: /
+            pathType: Prefix
     - host: "resilio-sync-stefanie.${SECRET_DOMAIN}"
       http:
         paths:
@@ -236,6 +237,7 @@ spec:
                 port:
                   number: 8889
             path: /
+            pathType: Prefix
   tls:
     - hosts:
         - "resilio-sync-ryan.${SECRET_DOMAIN}"
