deploy teedy config pvc

--- a/k8s/clusters/cluster-0/manifests/apps/collab/teedy/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/collab/teedy/helm-release.yaml
@@ -54,7 +54,7 @@ spec:
     persistence:
       data:
         enabled: true
-        existingClaim: teedy-pvc
+        existingClaim: teedy-config-pvc
       media:
         enabled: true
         existingClaim: collab-nfs-tank-share-pvc
