--- a/k8s/clusters/cluster-0/manifests/apps/home/mealie/helm-release.yaml
+++ b/k8s/clusters/cluster-0/manifests/apps/home/mealie/helm-release.yaml
@@ -34,16 +34,18 @@ spec:
           kubernetes.io/tls-acme: "true"
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
         hosts:
-        - host: "meals.${SECRET_DOMAIN}"
-          paths:
-          - path: /
-            pathType: Prefix
+          - host: "meals.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
-        - hosts:
-          - "meals.${SECRET_DOMAIN}"
-          secretName: mealie-cert
+          - hosts:
+              - "meals.${SECRET_DOMAIN}"
+            secretName: tls.mealie
     persistence:
       config:
         enabled: true
-        existingClaim: mealie-pvc
+        existingClaim: mealie-config-pvc
